crates/math-core/tests/snapshots/error_test__hline_in_non_array_env.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix} 1 \\\\ \\hline 2 \\end{matrix}"
---
Error: Found "\hline", which may only appear directly after a `\\` or at the beginning of an array.
   ╭─[ <input>:1:21 ]
   │
 1 │ \begin{matrix} 1 \\ \hline 2 \end{matrix}
   │                     ───┬──  
   │                        ╰──── cannot be used here
───╯
